fix layout issue with nav-bar and  board cards

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   /* border: solid 2px red; */
   text-align: left;
 }
-.nav-item {
+.navi-item {
   width: 100%;
   margin: 2px;
   font-weight: bold;
@@ -25,7 +25,7 @@
 .icon{
   margin-right: 10px;
 }
-.nav-item:first-child{
+.navi-item:first-child{
 background-color: #61b3f52b;
 border-radius: 5px;
 }
@@ -70,6 +70,10 @@ border-radius: 5px;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.erjJEk{
+  justify-content: left;
 }
 
 .App-link {
